service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: be-echo
  labels:
    type: be-echo
  annotations:
    cloud.google.com/app-protocols: '{"http-auth":"HTTP2", "http-nginx":"HTTP2", "http2-non":"HTTP2", "http2-tls":"HTTP2", "grpc-non":"HTTP2", "grpc-tls":"HTTP2"}'
    cloud.google.com/neg: '{"ingress": true, "exposed_ports": {"8080":{},"8081":{},"8002":{},"8003":{},"8004":{},"8005":{}}}'
    cloud.google.com/backend-config: '{"default": "be-echo-backendconfig"}'
spec:
  type: ClusterIP 
  ports:
  - name: http-auth
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: http-nginx
    port: 8081
    protocol: TCP
    targetPort: 8081
  - name: http2-non
    port: 8002
    protocol: TCP
    targetPort: 8002
  - name: http2-tls
    port: 8003
    protocol: TCP
    targetPort: 8003
  - name: grpc-non
    port: 8004
    protocol: TCP
    targetPort: 8004
  - name: grpc-tls
    port: 8005
    protocol: TCP
    targetPort: 8005
  - name: http-admin
    port: 12345
    protocol: TCP
    targetPort: 12345
  selector:
    app: be-echo
